# pps-tbrc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  change_hv_settings.cpp  change_nino_threshold_voltage.cpp  config.xml  fetch.cpp  fetch_vme.cpp  listener.cpp  main.cpp
config/: config.xml  config_cfd.xml  config_nofpga.xml
doc/: .gitignore
dqm/: CMakeLists.txt  DQMProcess.h  GastofCanvas.h  PPSCanvas.h  QuarticCanvas.h  daq.cpp  db.cpp  gastof.cpp  quartic.cpp
include/: Client.h  DQMProcess.h  Exception.h  FPGAHandler.h  FileConstants.h  FileReader.h  GastofCanvas.h  HTTPMessage.h  Listener.h  Message.h  MessageKeys.h  Messenger.h  NIM_HVModuleN470.h  OnlineDBHandler.h  PPSCanvas.h  QuarticCanvas.h  RunFile.h  Socket.h  SocketMessage.h  TDC.h  TDCBoundaryScan.h  TDCConfiguration.h  TDCConstants.h  TDCControl.h  TDCEvent.h  TDCRegister.h  TDCSetup.h  TDCStatus.h  USBHandler.h  VMEBridgeV1718.h  VMEReader.h  VMETDCV1x90.h  VMETDCV1x90Opcodes.h  VME_BridgeVx718.h  VME_CAENETControllerV288.h  VME_CFDV812.h  VME_FPGAUnitV1495.h  VME_GenericBoard.h  VME_IOModule.h  VME_IOModuleV262.h  (+9 more)
scripts/: DQMReader.py  DQMReader.py~  PPSenv.sh  PPSscripts.sh  Plot.py  RunControl.py  SocketHandler.py  make_ntuples.sh  run_over_all_files.py
src/: Client.cpp  FPGAHandler.cpp  FileReader.cpp  Listener.cpp  Messenger.cpp  NIM_HVModuleN470.cpp  Socket.cpp  TDC.cpp  TDCConfiguration.cpp  TDCSetup.cpp  USBHandler.cpp  VMEBridgeV1718.cpp  VMEReader.cpp  VMETDCV1x90.cpp  VME_BridgeVx718.cpp  VME_CAENETControllerV288.cpp  VME_CFDV812.cpp  VME_FPGAUnitV1495.cpp  VME_IOModule.cpp  VME_IOModuleV262.cpp  VME_SignalGenerator.cpp  VME_TDCV1x90.cpp  bridgeV1718.cpp  tdcV1x90.cpp  test_vme2.cpp
test/: CMakeLists.txt  db.cpp  dqmer.py  errors.cpp  gastof_occupancy_vs_run.cpp  multipipeserver.py  multireader.cpp  multiserver.py  quartic_occupancy_vs_run.cpp  reader.cpp  reader_channelid.cpp  reader_oneedge.cpp  reader_raw.cpp  servesocket.py  testdb.cpp  write_tree.cpp  write_tree_sorted.cpp
web/: control-behavior.js  control-page.html  dqmer.py  socket.js  socket3.js  socket_functions.js  style.css  style3.css  test.html  test3.html
web/v1/: index.html  socket.js  style.css
web/v2/: control-appearance.css  control-behavior.js  control-page.html
